--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
+/* https://prajwalpai21.github.io/Pai/  */
 *{
     margin:0;
     padding: 0;
